[package]
name = "bevy-ecs-animations"
version = "0.19.0"
edition = "2024"
authors = ["BlamelessGames"]
description = "An ECS-first approach to procedural animation in Bevy."
repository = "https://github.com/blamelessgames/bevy-ecs-animations"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "animation", "ecs", "procedural"]
categories = ["game-development", "graphics"]
readme = "README.md"
rust-version = "1.95.0"
documentation = "https://docs.rs/bevy-ecs-animations"
homepage = "https://github.com/blamelessgames/bevy-ecs-animations"

[dependencies]
bevy_app = { version = "0.19.0", default-features = false }
bevy_ecs = { version = "0.19.0", default-features = false }
bevy_math = { version = "0.19.0", default-features = false, optional = true }
bevy_time = { version = "0.19.0", default-features = false }

[dev-dependencies]
bevy = { version = "0.19.0", features = ["debug"] }
float_eq = "1.0.1"

[features]
# probably will move the combinators to a separate crate
default = [
    "std", "combinators"
]
combinators = [
    "bevy_math/curve"
]
std = [
    "bevy_math/std"
]
libm = [
    "bevy_math/libm"
]
nostd-libm = [
    "bevy_math/nostd-libm"
]
