[package]
name = "bevy_ecs_animations"
version = "0.19.2"
edition = "2024"
authors = ["BlamelessGames"]
description = "An ECS-first approach to procedural animation in Bevy."
repository = "https://github.com/blamelessgames/bevy_ecs_animations"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "animation", "ecs", "procedural"]
categories = ["game-development", "graphics"]
readme = "README.md"
rust-version = "1.95.0"
documentation = "https://docs.rs/bevy_ecs_animations"
homepage = "https://github.com/blamelessgames/bevy_ecs_animations"
exclude = [".github/", "all.sh"]

[dependencies]
bevy_app = { version = "0.19", default-features = false }
bevy_ecs = { version = "0.19", default-features = false }
bevy_math = { version = "0.19", default-features = false, optional = true }
bevy_time = { version = "0.19", default-features = false }

[dev-dependencies]
bevy = { version = "0.19", features = ["debug"] }
float_eq = "1.0.1"

[features]
default = [
    "std", "combinators"
]
combinators = [
    "bevy_math/curve"
]
std = [
    "bevy_math/std"
]
libm = [
    "bevy_math/libm"
]
nostd-libm = [
    "bevy_math/nostd-libm"
]
